Replace display table with fit-content

--- a/banners.css
+++ b/banners.css
@@ -112,7 +112,7 @@ body {
     color: white;
     padding: 2px 4px;
     margin-bottom: 5px;
-    display: table;
+    width: fit-content;
 }
 
 .travel {
